# storage/api-docs/api-docs.json
@@ -20,7 +20,7 @@
                 ],
                 "summary": "Display a listing of the resource.",
                 "description": "Returns app settings.",
-                "operationId": "api.country.index",
+                "operationId": "api.get_country",
                 "produces": [
                     "application/json",
                     "application/xml"
@@ -51,7 +51,7 @@
                 ],
                 "summary": "Display a listing of the resource.",
                 "description": "Returns app settings.",
-                "operationId": "api.country.index",
+                "operationId": "api.index",
                 "produces": [
                     "application/json",
                     "application/xml"
@@ -137,6 +137,20 @@
                         "name": "password",
                         "in": "query",
                         "description": "Password",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "client_id",
+                        "in": "query",
+                        "description": "Client ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "client_secret",
+                        "in": "query",
+                        "description": "Client Secret",
                         "required": true,
                         "type": "string"
                     }
@@ -461,6 +475,44 @@
                         "description": "Id of activity",
                         "required": true,
                         "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "App Settings."
+                    },
+                    "401": {
+                        "description": "Unauthorized action."
+                    }
+                }
+            }
+        },
+        "/farms/delete.{format?}": {
+            "get": {
+                "tags": [
+                    "Farms"
+                ],
+                "summary": "Display a listing of the resource.",
+                "description": "Remove a farm.",
+                "operationId": "api.farm.destroy",
+                "produces": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "parameters": [
+                    {
+                        "name": "format?",
+                        "in": "path",
+                        "description": "Response format.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "farm_data",
+                        "in": "query",
+                        "description": "Farm object to remove.",
+                        "required": true,
+                        "type": "string"
                     }
                 ],
                 "responses": {
